feat: add feature to check all todos

--- a/todos-html-js/index.html
+++ b/todos-html-js/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div class="container">
       <form id="todo-form" class="todo-form">
@@ -41,6 +42,10 @@
         <button type="submit" class="clear-completed-todos">
           Clear Completed Todos
         </button>
+      </form>
+
+      <form id="check-all-todos">
+        <button type="submit" class="check-all-todos">Check All Todos</button>
       </form>
     </div>
 
