feat: add todos item left for uncompleted todos

--- a/todos-html-js/index.html
+++ b/todos-html-js/index.html
@@ -47,6 +47,10 @@
       <form id="check-all-todos">
         <button type="submit" class="check-all-todos">Check All Todos</button>
       </form>
+
+      <div>
+        <p id="unchecked-todos"></p>
+      </div>
     </div>
 
     <script src="index.js"></script>
