--- a/todos-html-js/index.html
+++ b/todos-html-js/index.html
@@ -10,46 +10,74 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body>
-    <div class="container">
-      <form id="todo-form" class="todo-form">
-        <fieldset class="todo-field">
-          <legend class="todo-legend">To Do List</legend>
-          <label for="todo-text">Add new todo</label>
-          <input
-            type="text"
-            id="todo-text"
-            name="todo-text"
-            class="todo-text"
-            placeholder="What needs to be done?"
-          />
-          <button type="submit" id="submit" name="submit" class="submit">
-            Add
-          </button>
+    <div
+      class="w-full h-screen font-normal bg-gradient-to-b from-indigo-900 to-purple-900 text-white flex flex-col align-baseline items-center gap-6"
+    >
+      <form
+        id="todo-form"
+        class="todo-form bg-white flex w-full max-w-lg justify-center items-center p-4 mt-20 text-slate-950 rounded-md"
+      >
+        <fieldset class="todo-field w-full">
+          <legend class="todo-legend text-3xl font-bold mb-4">
+            To Do List 📋
+          </legend>
+          <div class="flex w-full justify-between items-center">
+            <label for="todo-text" class="font-bold text-xl">
+              Add new todo 📌
+            </label>
+            <input
+              type="text"
+              id="todo-text"
+              name="todo-text"
+              class="todo-text rounded border border-slate-500 w-1/2 p-2"
+              placeholder="What needs to be done?"
+            />
+            <button
+              type="submit"
+              id="submit"
+              name="submit"
+              class="submit bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded"
+            >
+              Add
+            </button>
+          </div>
         </fieldset>
       </form>
 
-      <section>
-        <ul id="todos" class="todos">
+      <section
+        class="flex flex-col gap-2 bg-white rounded-md text-slate-950 p-4 w-full max-w-lg justify-center items-center"
+      >
+        <ul id="todos" class="todos text-lg flex flex-col w-full gap-2">
           <!--  -->
         </ul>
+
+        <div class="flex justify-start items-center w-full">
+          <p id="unchecked-todos"></p>
+        </div>
       </section>
 
-      <form id="clear-completed-todos">
-        <button type="submit" class="clear-completed-todos">
-          Clear Completed Todos
-        </button>
-      </form>
+      <div class="flex w-full max-w-lg justify-between items-center">
+        <form id="check-all-todos">
+          <button
+            type="submit"
+            class="check-all-todos bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded"
+          >
+            Check All Todos
+          </button>
+        </form>
 
-      <form id="check-all-todos">
-        <button type="submit" class="check-all-todos">Check All Todos</button>
-      </form>
-
-      <div>
-        <p id="unchecked-todos"></p>
+        <form id="clear-completed-todos">
+          <button
+            type="submit"
+            class="clear-completed-todos bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded"
+          >
+            Clear Completed Todos
+          </button>
+        </form>
       </div>
     </div>
 
