--- a/todos-html-js/index.html
+++ b/todos-html-js/index.html
@@ -8,19 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body>
     <div
-      class="w-full h-screen font-normal bg-gradient-to-b from-indigo-900 to-purple-900 text-white flex flex-col align-baseline items-center gap-6"
-    >
+      class="w-full h-screen font-normal bg-gradient-to-b from-indigo-900 to-purple-900 text-white flex flex-col align-baseline items-center gap-6">
       <form
         id="todo-form"
-        class="todo-form bg-white flex w-full max-w-lg justify-center items-center p-4 mt-20 text-slate-950 rounded-md"
-      >
+        class="todo-form bg-white flex w-full max-w-lg justify-center items-center p-4 mt-20 text-slate-950 rounded-md drop-shadow-2xl">
         <fieldset class="todo-field w-full">
           <legend class="todo-legend text-3xl font-bold mb-4">
             To Do List 📋
@@ -34,29 +31,28 @@
               id="todo-text"
               name="todo-text"
               class="todo-text rounded border border-slate-500 w-1/2 p-2"
-              placeholder="What needs to be done?"
-            />
+              placeholder="What needs to be done?" />
             <button
               type="submit"
               id="submit"
               name="submit"
-              class="submit bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded"
-            >
+              class="submit bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded">
               Add
             </button>
           </div>
         </fieldset>
       </form>
 
-      <section
-        class="flex flex-col gap-2 bg-white rounded-md text-slate-950 p-4 w-full max-w-lg justify-center items-center"
-      >
-        <ul id="todos" class="todos text-lg flex flex-col w-full gap-2">
-          <!--  -->
-        </ul>
+      <section class="max-w-lg w-full">
+        <div
+          class="flex flex-col gap-2 bg-white rounded-md text-slate-950 p-4 w-full justify-center items-center drop-shadow-2xl">
+          <ul id="todos" class="todos text-lg flex flex-col w-full gap-2">
+            <!--  -->
+          </ul>
 
-        <div class="flex justify-start items-center w-full">
-          <p id="unchecked-todos"></p>
+          <div class="flex justify-start text-slate-400 items-center w-full">
+            <p id="unchecked-todos"></p>
+          </div>
         </div>
       </section>
 
@@ -64,8 +60,7 @@
         <form id="check-all-todos">
           <button
             type="submit"
-            class="check-all-todos bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded"
-          >
+            class="check-all-todos bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded">
             Check All Todos
           </button>
         </form>
@@ -73,8 +68,7 @@
         <form id="clear-completed-todos">
           <button
             type="submit"
-            class="clear-completed-todos bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded"
-          >
+            class="clear-completed-todos bg-emerald-500 hover:bg-emerald-600 py-2 px-4 text-white rounded">
             Clear Completed Todos
           </button>
         </form>
