--- a/todos-html-js/index.html
+++ b/todos-html-js/index.html
@@ -22,15 +22,15 @@
           <legend class="todo-legend text-3xl font-bold mb-4">
             To Do List 📋
           </legend>
-          <div class="flex w-full justify-between items-center">
-            <label for="todo-text" class="font-bold text-xl">
+          <div class="flex w-full justify-between items-center gap-2">
+            <label for="todo-text" class="font-semibold text-xl">
               Add new todo 📌
             </label>
             <input
               type="text"
               id="todo-text"
               name="todo-text"
-              class="todo-text rounded border border-slate-500 w-1/2 p-2"
+              class="todo-text rounded border border-slate-500 w-3/6 p-2"
               placeholder="What needs to be done?" />
             <button
               type="submit"
